--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 
-  <!-- {% include head.html %} -->
   {% include galheader.html %}
 
   <body>
@@ -28,6 +27,6 @@
 
   </body>
 
-</html>
+</html> -->
 
 
