--- a/_includes/gal.html
+++ b/_includes/gal.html
@@ -1,5 +1,11 @@
+{{page.description}}
+
+<div class="row">
 {% for image in page.images %}
 {% if include.image == null or include.image == image.name %}
-<a href="{{ page.imgfolder }}/{{ image.name }}" data-lightbox="1" title="{{ image.text }}"><img src="{{ page.imgfolder }}/{{ image.thumb }}" title="{{ image.text }}"></a>
+<div class="col-xs-4 col-sm-3 col-md-2 bottom-spacing">
+	<a href="{{ page.imgfolder }}/{{ image.name }}" data-lightbox="1" title="{{ image.text }}"><img src="{{ page.imgfolder }}/{{ image.thumb }}" title="{{ image.text }}"></a>
+</div>
 {% endif %}
 {% endfor %}
+</div>
