--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,18 @@
 
 // Our variables
 $base-font-family: Helvetica, Arial, sans-serif;
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+// *:before,
+// *:after {
+//   -webkit-box-sizing: border-box;
+//   -moz-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -47,7 +59,10 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "grid",
         "layout",
         "syntax-highlighting",
-        "image-styling"
+        "image-styling",
+        "grid-custom",
+        "forms"
 ;
