--- a/_includes/gal.html
+++ b/_includes/gal.html
@@ -4,7 +4,7 @@
 {% for image in page.images %}
 {% if include.image == null or include.image == image.name %}
 <div class="col-xs-4 col-sm-3 col-md-2 bottom-spacing">
-	<a href="{{ site.baseurl }}{{ page.imgfolder }}/{{ image.name }}" data-lightbox="1" title="{{ image.text }}"><img src="{{ site.baseurl }}{{ page.imgfolder }}/{{ image.thumb }}" title="{{ image.text }}"></a>
+	<a href="{{ site.baseurl }}/{{ page.imgfolder }}/{{ image.name }}" data-lightbox="1" title="{{ image.text }}"><img src="{{ site.baseurl }}/{{ page.imgfolder }}/{{ image.thumb }}" title="{{ image.text }}"></a>
 </div>
 {% endif %}
 {% endfor %}
