--- a/css/main.scss
+++ b/css/main.scss
@@ -64,5 +64,6 @@ $on-laptop:        800px;
         "syntax-highlighting",
         "image-styling",
         "grid-custom",
-        "forms"
+        "forms",
+        "lightbox"
 ;
